[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/Background/background.png" type="Texture" id=1]
[ext_resource path="res://font/SparkyStonesRegular-BW6ld.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Sprites/en-arriere.png" type="Texture" id=3]
[ext_resource path="res://Images/Sprites/en-arriere_hover.png" type="Texture" id=4]
[ext_resource path="res://scenes/parametre.gd" type="Script" id=5]
[ext_resource path="res://scenes/font_normal.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[node name="parametre" type="Node2D"]
script = ExtResource( 5 )

[node name="fond" type="Sprite" parent="."]
position = Vector2( 479, 300.5 )
scale = Vector2( 1.1582, 1.00833 )
texture = ExtResource( 1 )

[node name="label_titre" type="Label" parent="."]
margin_left = -4.0
margin_top = 68.0
margin_right = 1023.0
margin_bottom = 161.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paramètre"
align = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = 497.0
margin_right = 226.0
margin_bottom = 579.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label_pe" type="Label" parent="."]
margin_left = 193.0
margin_top = 237.0
margin_right = 452.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 6 )
text = "Plein écran :"

[node name="Button_pe" type="Button" parent="."]
margin_left = 489.0
margin_top = 228.0
margin_right = 606.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 6 )
text = "On"

[node name="Button_credit" type="Button" parent="."]
margin_left = 489.0
margin_top = 377.0
margin_right = 606.0
margin_bottom = 434.0
custom_fonts/font = SubResource( 2 )
text = "Crédits"

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Button_pe" to="." method="_on_Button_pe_pressed"]
[connection signal="pressed" from="Button_credit" to="." method="_on_Button_credit_pressed"]
